Implemented tags middleware and refactored routing
